--- a/docs/rsvp-ingress.yaml
+++ b/docs/rsvp-ingress.yaml
@@ -2,14 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rsvp-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-  - http:
+  - host: rsvpapp-demo.com
+    http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: rsvpapp
+            name: rsvapp-rsvpapp
             port:
               number: 80
