--- a/values.yaml
+++ b/values.yaml
@@ -4,10 +4,10 @@
 
 replicaCount: 3
 image:
-  repository: joedayz/rsvpapp
+  repository: quay.io/rh_ee_lfalero/rsvp
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "e230f1a0a0ec42a837c93fed7ee96e17d5b6977e"
+  tag: "f696ddc7c9ebf31a6efa159ea4003ee229c5e8a4"
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
